--- a/TradingCsvAnalyser/App.xaml
+++ b/TradingCsvAnalyser/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:TradingCsvAnalyser"
-             StartupUri="MainWindow.xaml">
+             StartupUri="ImportWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
