--- a/TradingCsvAnalyser/Windows/ImportWindow.xaml
+++ b/TradingCsvAnalyser/Windows/ImportWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TradingCsvAnalyser.ImportWindow"
+﻿<Window x:Class="TradingCsvAnalyser.Windows.ImportWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
