Way too big again EFCore and Migrations Work now 2 Types of Submits Smarter PriceEntry

--- a/TradingCsvAnalyser/Windows/ImportWindow.xaml
+++ b/TradingCsvAnalyser/Windows/ImportWindow.xaml
@@ -12,11 +12,25 @@
                 X
             </Button>
         </ToolBar>
+        <Label Height="25" Width="100" HorizontalAlignment="Left" 
+               Margin="0,0,0,50">
+            Symbol Name
+        </Label>
+        <TextBox Height="25" Width="100" HorizontalAlignment="Left" 
+                 Name="SymbolTextBox" >
+            
+        </TextBox>
+        
         <Button Name="FileDialogButton" Click="FileDialog_OnClick"
                 Height="25" Width="100" VerticalAlignment="Bottom" HorizontalAlignment="Center"
                 Margin="0,0,200,0">
             Look for File
         </Button>
-        <Button VerticalAlignment="Bottom" Name="SubmitButton" Height="25px" Width="100px" Click="SubmitButton_OnClick" Background="Aqua">Import Csv</Button>
+        <Button VerticalAlignment="Bottom" Name="SubmitButtonTv" Height="25px" Width="100px" Click="SubmitButtonTv_OnClick" Background="Aqua">Import TV Csv</Button>
+        <Button  Margin ="0,0,51,25" VerticalAlignment="Bottom" 
+                 Name="Iv" Height="25px" Width="150px" Background="Aqua"
+                 Click="SubmitButtonIv_OnClick">
+            Import Investing.com Csv
+        </Button>
     </Grid>
 </Window>
