--- a/TradingCsvAnalyser/Windows/OverView.xaml
+++ b/TradingCsvAnalyser/Windows/OverView.xaml
@@ -21,5 +21,13 @@
                 HorizontalAlignment="Right" VerticalAlignment="Top">
             Add new Data
         </Button>
+        <Button Width="100" Height="25"
+                HorizontalAlignment="Center" VerticalAlignment="Top"
+                Margin="0,25,0,0" Name="AnalyseButton"
+                Click="AnalyseButton_OnClick">
+            Analyse
+        </Button>
+        <DataGrid Height="200" Width="400" Margin="0,100,0,100" Name="MainDataGrid"></DataGrid>
     </Grid>
+   
 </Window>
