--- a/TradingCsvAnalyser/Windows/OverView.xaml
+++ b/TradingCsvAnalyser/Windows/OverView.xaml
@@ -29,9 +29,15 @@
                 HorizontalAlignment="Right" VerticalAlignment="Top">
             Add new Data
         </Button>
+        <DatePicker Width="70" Height="25" HorizontalAlignment="Center"
+                    VerticalAlignment="Top" Margin="220,0,0,0"
+                    Name="StartDatePicker" SelectedDateChanged="StartDatePicker_OnSelectedDateChanged"></DatePicker>
+        <DatePicker Width="70" Height="25" HorizontalAlignment="Center"
+                    VerticalAlignment="Top" Margin="360,0,0,0"
+                    Name="EndDatePicker" SelectedDateChanged="EndDatePicker_OnSelectedDateChanged"></DatePicker>
         <Button Width="100" Height="25"
-                HorizontalAlignment="Center" VerticalAlignment="Top"
-                Margin="250,0,0,0" Name="AnalyseButton"
+                HorizontalAlignment="Right" VerticalAlignment="Top"
+                Margin="0,0,220,0" Name="AnalyseButton"
                 Click="AnalyseButton_OnClick">
             Analyse
         </Button>
@@ -45,7 +51,13 @@
                Margin="20,25,0,0">Type of Range</Label>
         <Label Width="120" Height="25" VerticalAlignment="Top"
                Margin="0,25,280,0">Method</Label>
-        <DataGrid Height="660" Width="1200" Margin="0,100,0,100" Name="MainDataGrid"></DataGrid>
+        <Button Width="120" Height="25" 
+                Margin="0,0,100,0"
+                HorizontalAlignment="Right" VerticalAlignment="Top"
+                Click="DetailAnalysisButton_OnClick">
+            Detail Analysis
+        </Button>
+        <DataGrid AutoGeneratingColumn="MainDataGrid_OnAutoGeneratingColumn" Height="660" Width="1250" Margin="0,100,0,100" Name="MainDataGrid"></DataGrid>
     </Grid>
    
 </Window>
