--- a/TradingCsvAnalyser/Windows/FollowDayWindow.xaml
+++ b/TradingCsvAnalyser/Windows/FollowDayWindow.xaml
@@ -5,23 +5,28 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:TradingCsvAnalyser.Windows"
         mc:Ignorable="d"
-        Title="FollowDayWindow" Height="450" Width="800">
+        Title="FollowDayWindow" Height="1000" Width="1800">
     <Grid>
-        <ComboBox Name="SourceDayPicker" HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="100" 
-                  Margin="100,0,0,0"/>
-        <Label HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="80" 
-               Margin="110,25,0,0">Source Day</Label>
-        
-        <ComboBox Name="FollowDayPicker" HorizontalAlignment="Center" VerticalAlignment="Top" Height="25" Width="100" 
-                  Margin="0,0,300,0"/>
-        <Label HorizontalAlignment="Center" VerticalAlignment="Top" Height="25" Width="80" 
-               Margin="10,25,300,0">Follow Day</Label>
         <ComboBox Name="SymbolPicker" HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="100"
                   Margin="0,0,0,0" />
         <Label HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="80" 
                Margin="10,25,0,0">Symbol</Label>
         
+        <ComboBox Name="SourceDayPicker" HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="100" 
+                  Margin="100,0,0,0"/>
+        <Label HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="80" 
+               Margin="110,25,0,0">Source Day</Label>
         
+        <ComboBox HorizontalAlignment="Center" VerticalAlignment="Top" Height="25" Width="100" 
+                  Margin="0,0,300,0" Name="SourceDirectionPicker">
+        </ComboBox>
+        <Label HorizontalAlignment="Center" VerticalAlignment="Top" Height="25" Width="100" 
+               Margin="0,25,300,0">Source Direction</Label>
+        
+        <ComboBox Name="FollowDayPicker" HorizontalAlignment="Center" VerticalAlignment="Top" Height="25" Width="100" 
+                  Margin="0,0,100,0"/>
+        <Label HorizontalAlignment="Center" VerticalAlignment="Top" Height="25" Width="80" 
+               Margin="10,25,100,0">Follow Day</Label>
         
         <DatePicker Width="70" Height="25" HorizontalAlignment="Center"
                     VerticalAlignment="Top" Margin="220,0,0,0"
@@ -31,8 +36,11 @@
                     Name="EndDatePicker" />
         
         <Button Name="AnalyserButton" Height="25" Width="75" VerticalAlignment="Top" HorizontalAlignment="Right"
-        >
+        Click="AnalyserButton_OnClick">
            Analyse
         </Button>
+        
+        <DataGrid Name="FollowResultsGrid" AutoGeneratingColumn="FollowResultsGrid_OnAutoGeneratingColumn" 
+                  Width="1800" Height="800"/>
     </Grid>
 </Window>
