--- a/TradingCsvAnalyser/Windows/FollowDayWindow.xaml
+++ b/TradingCsvAnalyser/Windows/FollowDayWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:TradingCsvAnalyser.Windows"
         mc:Ignorable="d"
-        Title="FollowDayWindow" Height="1000" Width="1800">
+        Title="FollowDayWindow" Height="1000" Width="1800" Closing="FollowDayWindow_OnClosing">
     <Grid>
         <ComboBox Name="SymbolPicker" HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="100"
                   Margin="0,0,0,0" DropDownOpened="SymbolPicker_OnDropDownOpened"/>
@@ -16,6 +16,10 @@
                   Margin="100,0,0,0"/>
         <Label HorizontalAlignment="Left" VerticalAlignment="Top" Height="25" Width="80" 
                Margin="110,25,0,0">Source Day</Label>
+        
+        <Button Width="100" Height="25" HorizontalAlignment="Left" VerticalAlignment="Top"
+                Margin="200,0,0,0" Click="BuilderWindowButton_OnClick"
+                Name = "BuilderWindowButton">Build Scenario</Button>
         
         <ComboBox HorizontalAlignment="Center" VerticalAlignment="Top" Height="25" Width="100" 
                   Margin="0,0,300,0" Name="SourceDirectionPicker">
