--- a/TradingCsvAnalyser/Windows/OverView.xaml
+++ b/TradingCsvAnalyser/Windows/OverView.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:TradingCsvAnalyser.Windows"
         mc:Ignorable="d"
-        Title="OverView" Height="800" Width="1250">
+        Title="OverView" Height="800" Width="1250" Closing="OverView_OnClosing">
     <Grid>
         <ComboBox Name="SymbolSelectorBox" 
                   SelectionChanged="SymbolSelectorBox_OnSelectionChanged"
@@ -64,6 +64,25 @@
             Detail Analysis
         </Button>
         <DataGrid AutoGeneratingColumn="MainDataGrid_OnAutoGeneratingColumn" Height="660" Width="1250" Margin="0,100,0,100" Name="MainDataGrid"></DataGrid>
+        
+        <Button Name="SaveResultsButton" Height="35" Width="100" 
+                VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                Click="SaveResultsButton_OnClick"
+                >Save as Csv</Button>
+        <Button Name="LoadResultsButton" Height="35" Width="100" 
+                VerticalAlignment="Bottom" HorizontalAlignment="Right"
+                Margin="0,0,0,35" Click="LoadResultsButton_OnClick"
+        >Load From Csv</Button>
+        
+        <Button Name="DeleteButton" Height="35" Width="100"
+                VerticalAlignment="Bottom" HorizontalAlignment="Left"
+                Margin="0,0,0,35" Click="DeleteButton_OnClick"
+        >Remove Last Line</Button>
+        <Button Name="ClearingButton" Height="35" Width="100"
+                VerticalAlignment="Bottom" HorizontalAlignment="Left"
+                Click="ClearingButton_OnClick"
+                >Clear Workspace</Button>
+        
     </Grid>
    
 </Window>
